--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ mypy = "^1.10.1"
 pre-commit = "^4.0.1"
 pytest-cov = "^6.0.0"
 ruff = "^0.8.0"
+styxdefs = "^0.5.0"  # for old tests. Remove once tests are migrated
 
 [tool.poetry.group.docs.dependencies]
 pdoc = "^15.0.0"
