--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "styx"
 version = "0.1.1"
 description = "Boutiques code generator"
-authors = [{ name = "Florian Rupprecht", email = "floruppr@gmail.com" }]
+authors = [{name = "Florian Rupprecht", email = "floruppr@gmail.com"}]
 requires-python = "~=3.11"
 readme = "README.md"
 license = "LGPL-2.1"
@@ -17,16 +17,12 @@ dev = [
   "pre-commit>=4.0.1,<5",
   "pytest-cov>=6.0.0,<7",
   "ruff>=0.8.0,<0.13",
-  "styxdefs>=0.5.0,<0.6",
+  "styxdefs>=0.5.0,<0.6"
 ]
 docs = ["pdoc>=15.0.0,<16"]
 
 [tool.uv]
 default-groups = ["dev", "docs"]
-
-[build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
 
 [tool.pytest.ini_options]
 pythonpath = ["src"]
@@ -45,11 +41,11 @@ target-version = "py311"
 [tool.ruff.lint]
 select = ["ANN", "D", "E", "F", "I"]
 ignore = [
-  "D100", # Missing docstring in public module.
-  "D101", # Missing docstring in public class.
-  "D102", # Missing docstring in public method.
-  "D103", # Missing docstring in public function.
-  "D107", # Missing docstring in __init__.
+  "D100",  # Missing docstring in public module.
+  "D101",  # Missing docstring in public class.
+  "D102",  # Missing docstring in public method.
+  "D103",  # Missing docstring in public function.
+  "D107"  # Missing docstring in __init__.
 ]
 fixable = ["ALL"]
 unfixable = []
@@ -59,3 +55,7 @@ convention = "google"
 
 [tool.ruff.lint.per-file-ignores]
 "tests/**/*.py" = []
+
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
