--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,9 +3,12 @@ name = "styx"
 version = "0.1.1"
 description = "Boutiques code generator"
 authors = [{name = "Florian Rupprecht", email = "floruppr@gmail.com"}]
-requires-python = "~=3.11"
+requires-python = ">=3.12.0, <3.13"
 readme = "README.md"
 license = "LGPL-2.1"
+dependencies = [
+    "typing-extensions>=4.12.2",
+]
 
 [project.scripts]
 styx = "styx.cli:main"
@@ -32,7 +35,7 @@ ignore_missing_imports = true
 
 [tool.ruff]
 preview = true
-extend-exclude = ["examples", "src/styx/boutiques/model.py"]
+extend-exclude = ["examples"]
 line-length = 120
 indent-width = 4
 src = ["src"]
@@ -57,5 +60,5 @@ convention = "google"
 "tests/**/*.py" = []
 
 [build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
+requires = ["uv_build>=0.8.13,<0.9.0"]
+build-backend = "uv_build"
