--- a/.github/ISSUE_TEMPLATE/development_task.yaml
+++ b/.github/ISSUE_TEMPLATE/development_task.yaml
@@ -3,7 +3,7 @@ description: This is a template for a development task
 # If you want to enable automatic linking to projects,
 # uncomment the following line and replace the project ID
 # with the ID of your project.
-# projects: ["childmindresearch/1"]
+# projects: ["styx-api/1"]
 title: 'Task: '
 labels: [task]
 body:
